Expands .gitignore to cover files that auto-generation missed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 
+# Added by Gustav Lahti
+.idea/intelligentlearning.iml
+.idea/misc.xml
+.idea/modules.xml
+
+
 # Created by https://www.gitignore.io/api/python,windows,phpstorm
 
 ### PhpStorm ###
